--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "logger": "^0.0.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-redux": "^7.2.4",
+    "react-icons": "^2.2.7",
+    "react-redux": "^5.0.7",
     "react-scripts": "1.1.1",
-    "redux": "^4.1.0",
-    "redux-thunk": "^2.3.0"
+    "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
